samples/_failures_safe/1761246859_97a10b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e80ec562.c: In function ‘main’:
./samples/SAFE/__tmp_e80ec562.c:140:9: error: expected expression at end of input
  140 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_e80ec562.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e80ec562.c:140:9: error: expected declaration or statement at end of input
